add ethereum packages and block info to dapp

--- a/parking-dapp/parking-dapp.html
+++ b/parking-dapp/parking-dapp.html
@@ -3,8 +3,13 @@
 </head>
 
 <body>
+  {{> blockchain}}
   {{> map}}
 </body>
+
+<template name="blockchain">
+    Ethereum last block {{currentBlockNumber}} in {{currentBlockTime}} seconds.
+</template>
 
 <template name="map">  
   <div class="map-container">
