adding events and inline comments

--- a/parking-dapp/parking-dapp.html
+++ b/parking-dapp/parking-dapp.html
@@ -8,7 +8,7 @@
 </body>
 
 <template name="blockchain">
-    Ethereum last block {{currentBlockNumber}} in {{currentBlockTime}} seconds.
+    Ethereum last block {{currentBlockNumber}} at {{currentBlockTime}}
 </template>
 
 <template name="map">  
