--- a/parking-dapp/parking-dapp.html
+++ b/parking-dapp/parking-dapp.html
@@ -3,16 +3,28 @@
 </head>
 
 <body>
-  {{> blockchain}}
-  {{> map}}
+  {{> dapp}}
 </body>
 
-<template name="blockchain">
-    Ethereum last block {{currentBlockNumber}} at {{currentBlockTime}}
-</template>
-
-<template name="map">  
-  <div class="map-container">
+<template name="dapp">  
+  <header class="dapp-header">
+    <h1>Parking Places in Oldenburg</h1>
+    <h3>last block {{currentBlockNumber}} at {{currentBlockTime}}</h3>
+  </header>
+  
+  <div class="dapp-flex-content">
+    <!-- aside -->
+    <aside class="dapp-aside">
+      <h2>an Ethereum decentralized application</h2>
+      Select your account to pay for a parking place reservation:
+      {{> dapp_selectAccount accounts=accounts showAccountTypes=true}}
+      {{dapp_formatBalance "1000000000000000000" "0,0.00[000] UNIT"}} = 
+      {{dapp_formatBalance "1000000000000000000" "0,0.00[0000] UNIT" "btc"}} = 
+      {{dapp_formatBalance "1000000000000000000" "0,0.00 UNIT" "eur"}}
+    </aside>
+    <!-- content-->
+    <main class="dapp-content">
       {{> googleMap name="map" options=mapOptions}}
-  </div>
+    </main>
+  </div>  
 </template> 
