--- a/parking-dapp/parking-dapp.html
+++ b/parking-dapp/parking-dapp.html
@@ -16,11 +16,20 @@
     <!-- aside -->
     <aside class="dapp-aside">
       <h2>an Ethereum decentralized application</h2>
+      Contract address:
+      {{> dapp_addressInput placeholder=contractAddress disabled="true"}}
+      <br>
+      Controller address:
+      {{> dapp_addressInput placeholder=contractController disabled="true"}}
+      <br>
       Select your account to pay for a parking place reservation:
       {{> dapp_selectAccount accounts=accounts showAccountTypes=true}}
+      <br>
       {{dapp_formatBalance "1000000000000000000" "0,0.00[000] UNIT"}} = 
       {{dapp_formatBalance "1000000000000000000" "0,0.00[0000] UNIT" "btc"}} = 
       {{dapp_formatBalance "1000000000000000000" "0,0.00 UNIT" "eur"}}
+      <br>
+      You have to pay {{dapp_formatBalance contractParkingCosts "0,0.00[000] UNIT"}} per parking block.
     </aside>
     <!-- content-->
     <main class="dapp-content">
