--- a/parking-dapp/parking-dapp.html
+++ b/parking-dapp/parking-dapp.html
@@ -1,66 +1,67 @@
 <head>
-  <title>Decentralized Application for Parking in Oldenburg (GER)</title>
+    <title>Decentralized Application for Parking in Oldenburg (GER)</title>
 </head>
 
 <body>
-  {{> dapp}}
-  {{> dapp_modalPlaceholder}}
+{{> dapp}}
+{{> dapp_modalPlaceholder}}
 </body>
 
-<template name="dapp">  
-  <header class="dapp-header">
-    <h1>Parking Places in Oldenburg</h1>
-    <h3>last block {{currentBlockNumber}} at {{currentBlockTime}}</h3>
-  </header>
-  
-  <div class="dapp-flex-content">
-    <!-- aside -->
-    <aside class="dapp-aside">
-      <h2>an Ethereum decentralized application</h2>
-      Contract address:
-      {{> dapp_addressInput placeholder=contractAddress disabled="true"}}
-      <br>
-      Controller address:
-      {{> dapp_addressInput placeholder=contractController disabled="true"}}
-      <br>
-      Select your account to pay for a parking place reservation:
-      <div class="from">
-      {{> dapp_selectAccount accounts=accounts showAccountTypes=true}}
-      </div>
-      <br>
-      <small>
-      {{dapp_formatBalance "1000000000000000000" "0,0.00[000] UNIT"}} = 
-      {{dapp_formatBalance "1000000000000000000" "0,0.00[0000] UNIT" "btc"}} = 
-      {{dapp_formatBalance "1000000000000000000" "0,0.00 UNIT" "eur"}}
-      </small>
-      <br>
-      You have to pay {{dapp_formatBalance contractParkingCosts "0,0.00[000] UNIT"}} per parking block.
-      <br><br>
-      Insert place address:
-      <div class="to">
-      {{> dapp_addressInput}}
-      </div>
-      <div align="right">
-        <form class="block">Reserve until block....
-          <input type="number" name="block" min={{currentBlockNumber}} placeholder="type block number min. {{currentBlockNumber}}" pattern="[0-9]*" title="tooltip">
-          <small>hit enter to set block number and calculate costs</small>
-        </form>
-      </div>
-      <small>Your estimated costs is {{dapp_formatBalance estimatedParkingCosts "0,0.00[000] UNIT"}}.</small>
-      <button type="submit" class="dapp-block-button">Park now</button>
-      <h4>Your contract payments</h4>
-      {{#each contractPayments}}
-      <li>{{this}}</li>
-      {{/each}}
-    </aside>
-    <!-- content-->
-    <main class="dapp-content">
-      {{> googleMap name="map" options=mapOptions}}
-    </main>
-  </div>  
-</template> 
+<template name="dapp">
+    <header class="dapp-header">
+        <h1>Parking Places in Oldenburg</h1>
+        <h3>last block {{currentBlockNumber}} at {{currentBlockTime}}</h3>
+    </header>
+
+    <div class="dapp-flex-content">
+        <!-- aside -->
+        <aside class="dapp-aside">
+            <h2>an Ethereum decentralized application</h2>
+            Contract address:
+            {{> dapp_addressInput placeholder=contractAddress disabled="true"}}
+            <br>
+            Controller address:
+            {{> dapp_addressInput placeholder=contractController disabled="true"}}
+            <br>
+            Select your account to pay for a parking place reservation:
+            <div class="from">
+                {{> dapp_selectAccount accounts=accounts showAccountTypes=true}}
+            </div>
+            <br>
+            <small>
+                {{dapp_formatBalance "1000000000000000000" "0,0.00[000] UNIT"}} =
+                {{dapp_formatBalance "1000000000000000000" "0,0.00[0000] UNIT" "btc"}} =
+                {{dapp_formatBalance "1000000000000000000" "0,0.00 UNIT" "eur"}}
+            </small>
+            <br>
+            You have to pay {{dapp_formatBalance contractParkingCosts "0,0.00[000] UNIT"}} per parking block.
+            <br><br>
+            Insert place address:
+            <div class="to">
+                {{> dapp_addressInput placeholder="copy paste address from place info of map markers" }}
+            </div>
+            <div align="right">
+                <form class="block">Reserve until block....
+                    <input type="number" name="block" min={{currentBlockNumber}} placeholder="type block number
+                           min. {{currentBlockNumber}}" pattern="[0-9]*" title="tooltip">
+                    <small>hit enter to set block number and calculate costs</small>
+                </form>
+            </div>
+            <small>Your estimated costs is {{dapp_formatBalance estimatedParkingCosts "0,0.00[000] UNIT"}}.</small>
+            <button type="submit" class="dapp-block-button">Park now</button>
+            <h4>Your contract payments</h4>
+            {{#each contractPayments}}
+                <li>{{this}}</li>
+            {{/each}}
+        </aside>
+        <!-- content-->
+        <main class="dapp-content">
+            {{> googleMap name="map" options=mapOptions}}
+        </main>
+    </div>
+</template>
 
 <template name="modal_info">
-  <h1>{{header}}</h1>
-  <p>{{message}}</p>
+    <h1>{{header}}</h1>
+    <p>{{message}}</p>
 </template>
