add verification for inserted place address and block number

--- a/parking-dapp/parking-dapp.html
+++ b/parking-dapp/parking-dapp.html
@@ -43,7 +43,7 @@
             <div align="right">
                 <form class="block">Reserve until block....
                     <input type="number" name="block" min={{currentBlockNumber}} placeholder="type block number
-                           min. {{currentBlockNumber}}" pattern="[0-9]*" title="tooltip">
+                           min. {{currentBlockNumber}}" pattern="[0-9]*">
                     <small>hit enter to set block number and calculate costs</small>
                 </form>
             </div>
