--- a/parking-dapp/parking-dapp.html
+++ b/parking-dapp/parking-dapp.html
@@ -49,6 +49,7 @@
             </div>
             <small>Your estimated costs is {{dapp_formatBalance estimatedParkingCosts "0,0.00[000] UNIT"}}. </small>
             <button type="submit" class="dapp-block-button">Park now</button>
+            <div align="right"><button type="submit" class="dapp-tag-button">Check parking</button></div>
             <h4>Your contract payments</h4>
             {{#each contractPayments}}
                 <li>{{this}}</li>
