--- a/parking-dapp/parking-dapp.html
+++ b/parking-dapp/parking-dapp.html
@@ -40,12 +40,9 @@
             <div class="to">
                 {{> dapp_addressInput placeholder="copy paste address from place info of map markers" }}
             </div>
-            <div align="right">
-                <form class="block">Reserve until block....
-                    <input type="number" name="block" min={{currentBlockNumber}} placeholder="type block number
-                           min. {{currentBlockNumber}}" pattern="[0-9]*">
-                    <small>hit enter to set block number and calculate costs</small>
-                </form>
+            <div align="right">Reserve until block....
+                <input type="number" name="block" min={{currentBlockNumber}} pattern="[0-9]*" class="block"
+                       placeholder="type block number min. {{currentBlockNumber}}" >
             </div>
             <small>Your estimated costs is {{dapp_formatBalance estimatedParkingCosts "0,0.00[000] UNIT"}}. </small>
             <button type="submit" class="dapp-block-button">Park now</button>
