--- a/parking-dapp/client/parking-dapp.html
+++ b/parking-dapp/client/parking-dapp.html
@@ -41,8 +41,8 @@
                 {{> dapp_addressInput placeholder="copy paste address from place info of map markers" }}
             </div>
             <div align="right">Reserve until block....
-                <input type="number" name="block" min={{currentBlockNumber}} pattern="[0-9]*" class="block"
-                       placeholder="type block number min. {{currentBlockNumber}}" >
+                <input type="number" name="block" pattern="[0-9]*" class="block"
+                       min={{currentBlockNumber}}  placeholder="typed block number must be in future" >
             </div>
             <br>
             <small>Your estimated costs is {{dapp_formatBalance estimatedParkingCosts "0,0.00[000] UNIT"}}. </small>
