--- a/parking-dapp/client/parking-dapp.html
+++ b/parking-dapp/client/parking-dapp.html
@@ -42,10 +42,14 @@
             </div>
             <div align="right">Reserve until block....
                 <input type="number" name="block" pattern="[0-9]*" class="block"
-                       min={{currentBlockNumber}}  placeholder="typed block number must be in future" >
+                       placeholder="type block number in future" min={{currentBlockNumber}}>
             </div>
             <br>
-            <small>Your estimated costs is {{dapp_formatBalance estimatedParkingCosts "0,0.00[000] UNIT"}}. </small>
+            <small>Your estimated costs is
+                {{dapp_formatBalance estimatedParkingCosts "0,0.00[000] UNIT"}} =
+                {{dapp_formatBalance estimatedParkingCosts "0,0.00[0000] UNIT" "btc"}} =
+                {{dapp_formatBalance estimatedParkingCosts "0,0.00 UNIT" "eur"}}
+            </small>
             <button type="submit" class="dapp-block-button">Park now</button>
             <div align="center" class="check">
                 <button type="submit" class="dapp-large">Check parking</button>
@@ -58,7 +62,6 @@
                             {{#if equals this.type 'receive'}}
                                 <li>
                                     {{dapp_formatBalance this.value "0,0.00[000] UNIT"}} =
-                                    {{dapp_formatBalance this.value "0,0.00[0000] UNIT" "btc"}} =
                                     {{dapp_formatBalance this.value "0,0.00 UNIT" "eur"}}
                                 </li>
                             {{/if}}
@@ -69,7 +72,6 @@
                             {{#if equals this.type 'sent'}}
                                 <li>
                                     {{dapp_formatBalance this.value "0,0.00[000] UNIT"}} =
-                                    {{dapp_formatBalance this.value "0,0.00[0000] UNIT" "btc"}} =
                                     {{dapp_formatBalance this.value "0,0.00 UNIT" "eur"}}
                                 </li>
                             {{/if}}
